[gd_scene load_steps=5 format=1]

[ext_resource path="res://Data/Hud_scripts/Card.gd" type="Script" id=1]
[ext_resource path="res://Data/Hud_scripts/Inventory/card.png" type="Texture" id=2]
[ext_resource path="res://Data/Hud_scripts/Inventory/rating_bar.png" type="Texture" id=3]
[ext_resource path="res://Data/Hud_scripts/Inventory/1 pixel.png" type="Texture" id=4]

[node name="Card" type="Node2D"]

visibility/opacity = 0.9
script/script = ExtResource( 1 )

[node name="temp_back" type="Sprite" parent="."]

visibility/behind_parent = true
texture = ExtResource( 2 )
centered = false

[node name="rating" type="Control" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 25.0
margin/top = 100.0
margin/right = 65.0
margin/bottom = 140.0

[node name="stat" type="Label" parent="rating"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 102.0
margin/bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "damage"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="rating_bar" type="Sprite" parent="rating"]

editor/display_folded = true
transform/pos = Vector2( 0, 14 )
texture = ExtResource( 3 )
centered = false

[node name="rating" type="Sprite" parent="rating/rating_bar"]

visibility/behind_parent = true
transform/pos = Vector2( 1, 1 )
transform/scale = Vector2( 1, 6 )
texture = ExtResource( 4 )
centered = false
modulate = Color( 0.078125, 0, 1, 1 )

[node name="Position2D" type="Position2D" parent="rating"]

transform/pos = Vector2( 0, 23 )

[node name="rating_list" type="Node2D" parent="."]

[node name="rate_bar_pos" type="Position2D" parent="."]

transform/pos = Vector2( 25, 95 )

[node name="name" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 5.0
margin/top = 20.0
margin/right = 145.0
margin/bottom = 35.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Plasma Repeater"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="description" type="RichTextLabel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 100.0
margin/right = 140.0
margin/bottom = 240.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0

[node name="display_pos" type="Position2D" parent="."]

transform/pos = Vector2( 76, 50 )

[node name="fundamental" type="RichTextLabel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 65.0
margin/right = 140.0
margin/bottom = 95.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0

[node name="amount" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 75.0
margin/top = 5.0
margin/right = 145.0
margin/bottom = 20.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="value" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 6.0
margin/top = 5.0
margin/right = 76.0
margin/bottom = 20.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "$123456"
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


